# bevy_auto_system_macro

./: CHANGELOG.md  Cargo.toml  README.md
examples/: complex.rs
src/: analysis.rs  codegen.rs  lib.rs  parser.rs  util.rs
