[package]
name = "bevy_auto_system_macro"
version = "0.1.1"
authors = ["destravous <destravous@gmail.com>"]
description = "A macro for making bevy system queries more convenient"
license = "MIT OR Apache-2.0"
repository = "https://github.com/destravous/bevy_auto_system_macro"
keywords = ["proc_macro", "bevy", "ecs", "macro", "gamedev"]
categories = ["game-development", "development-tools::procedural-macro-helpers"]
readme = "README.md"
include = ["src/**/*", "Cargo.toml", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]

edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit-mut", "extra-traits"] }

[dev-dependencies]
bevy = "0.16"
